--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
 title: This is a trial
 description: there is nothing to describe.
